--- a/src/docs/customization/themes.mdx
+++ b/src/docs/customization/themes.mdx
@@ -110,7 +110,7 @@ $colors: (
 Use the `generate-color-variables` to generate the color variables under a specified selector.
 
 ```scss
-@use '~sprucecss/scss/spruce' as *;
+@use 'sprucecss/scss/spruce' as *;
 
 @include generate-color-variables(
   $dark-colors,
