--- a/src/docs/getting-started/print.mdx
+++ b/src/docs/getting-started/print.mdx
@@ -10,7 +10,7 @@ github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/ge
 You can turn on basic print styles from the `$settings` map; set the `print` to `true` to turn it on.
 
 ```scss
-@use '~sprucecss/scss/spruce' with (
+@use 'sprucecss/scss/spruce' with (
   $settings: (
     'print': true,
   ),
