--- a/src/docs/getting-started/installation.mdx
+++ b/src/docs/getting-started/installation.mdx
@@ -77,7 +77,7 @@ You can control the flow of the style generation in a lot of ways (for more info
 ```scss
 @use 'sprucecss/scss/spruce' as *;
 
-@include spruce.generate-styles;
+@include generate-styles;
 ```
 
 ## Compiling Sass
