Switch to inline-size and block-size properties

--- a/src/blog/writing-better-css.mdx
+++ b/src/blog/writing-better-css.mdx
@@ -39,9 +39,9 @@ In which order would you write the following code block? Sure, in the end, it do
 
 ```scss
 img {
+  block-size: auto;
   display: block;
-  height: auto;
-  max-width: 100%;
+  max-inline-size: 100%;
   user-select: none;
 }
 ```
