--- a/src/docs/customization/variables.mdx
+++ b/src/docs/customization/variables.mdx
@@ -45,7 +45,7 @@ There are two types of variables: single one and map. All of them are overwritab
     'text-transform': uppercase,
   ),
   $layout: (
-    'container-width': 70rem,
+    'container-inline-size': 70rem,
   ),
 );
 ```
