--- a/src/docs/elements/media.mdx
+++ b/src/docs/elements/media.mdx
@@ -16,9 +16,9 @@ In Spruce, we use a general responsive styling for all images. We also disable t
 
 ```css
 img {
+  block-size: auto;
   display: block;
-  height: auto;
-  max-width: 100%;
+  max-inline-size: 100%;
   user-select: none;
 }
 ```
