--- a/src/docs/sass/functions.mdx
+++ b/src/docs/sass/functions.mdx
@@ -79,8 +79,8 @@ If you use the CSS custom property mode, you should always use this function bec
 ```scss
 .element {
   border-radius: config('border-radius-lg', $display);
-  height: 3rem;
-  width: 3rem;
+  block-size: 3rem;
+  inline-size: 3rem;
 }
 ```
 
