--- a/src/docs/sass/mixins.mdx
+++ b/src/docs/sass/mixins.mdx
@@ -162,7 +162,7 @@ The `focus-ring()` is a small internal helper mixin to set up the focus state of
 | `$border-color`    | `null`                   | The color value of the border. It is needed mostly on inputs. |
 | `$ring-color`      |                          | The color of the focus ring.                                  |
 | `$box-shadow-type` |                          | Where should it place the box-shadow: `outside` or `inside`.  |
-| `$ring-width`      |                          | The width of the focus ring.                                  |
+| `$ring-size`      |                          | The width of the focus ring.                                  |
 | `$ring-offset`     |                          | The offset of the focus ring if the type is `outline`.        |
 
 [View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/mixin/_form.scss#L6)
@@ -176,7 +176,7 @@ The `focus-ring()` is a small internal helper mixin to set up the focus state of
     $border-color: color('border-focus', 'form'),
     $ring-color: color('ring-focus', 'form'),
     $box-shadow-type: config('focus-ring-box-shadow-type', $form-control, false),
-    $ring-width: config('focus-ring-width', $form-control, false),
+    $ring-size: config('focus-ring-size', $form-control, false),
     $ring-offset: config('focus-ring-offset', $form-control, false)
   );
 }
@@ -267,10 +267,10 @@ With the help of the `layout-center` mixin, you can center any element.  It is m
 
 ### Argument(s)
 
-| Name             | Default Value             | Description                                                                                                                        |
-|------------------|---------------------------|------------------------------------------------------------------------------------------------------------------------------------|
-| `$gap`           | `'m'`                       | The padding value on either side of the element. The value comes from the `$spacers` map, use any declared key name for shorthand. |
-| `$max-width`     | `$container-width` | Set the max-width value of the element.                                                                                            |
+| Name                   | Default Value                              | Description                                                                                                                        |
+|------------------------|--------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------|
+| `$gap`                 | `'m'`                                      | The padding value on either side of the element. The value comes from the `$spacers` map, use any declared key name for shorthand. |
+| `$max-inline-size`     | `config('container-inline-size', $layout)` | Set the max-inline-size (max-width) value of the element.                                                                          |
 
 [View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/mixin/_layout.scss#L6)
 
@@ -292,13 +292,13 @@ Using the help of the `layout-stack` mixin, you can classical stack layout where
 
 ### Argument(s)
 
-| Name          | Default Value            | Description                                                                                                              |
-|---------------|--------------------------|--------------------------------------------------------------------------------------------------------------------------|
-| `$gap`        | `'m'`                      | The margin value between the elements. The value comes from the `$spacers` map, use any declared key name for shorthand. |
-| `$width`      | `false`                  | Set `width: 100%;` on the stacked elements.                                                                              |
-| `$align`      | `none`                   | Set explicit align to the elements(`none`, `left`, `right`).                                                             |
-| `$important`  | `false`                  | Add !important on descandent elements to `margin-block-start`.                                                           |
-| `$split`      | `0`                      | Split the elements vertically from the nth element.                                                                      |
+| Name           | Default Value            | Description                                                                                                              |
+|----------------|--------------------------|--------------------------------------------------------------------------------------------------------------------------|
+| `$gap`         | `'m'`                    | The margin value between the elements. The value comes from the `$spacers` map, use any declared key name for shorthand. |
+| `$inline-size` | `false`                  | Whether it has explicit width (inline-size).                                                                             |
+| `$align`       | `none`                   | Set explicit align to the elements(`none`, `left`, `right`).                                                             |
+| `$important`   | `false`                  | Add !important on descandent elements to `margin-block-start`.                                                           |
+| `$split`       | `0`                      | Split the elements vertically from the nth element.                                                                      |
 
 [View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/mixin/_layout.scss#L16)
 
@@ -341,8 +341,8 @@ Using the `layout-sidebar` mixin, you can create a two-column sidebar layout dec
 
 | Name                 | Default Value          | Description                                                                                                              |
 |----------------------|------------------------|--------------------------------------------------------------------------------------------------------------------------|
-| `$gap`               | `'m'`                    | The gutter value between the elements. The value comes from the `$spacers` map, use any declared key name for shorthand. |
-| `$sidebar-width`     | `18.75rem`             | The width of the sidebar element.                                                                                        |
+| `$gap`               | `'m'`                  | The gutter value between the elements. The value comes from the `$spacers` map, use any declared key name for shorthand. |
+| `$inline-size`       | `18.75rem`             | The width of the sidebar element.                                                                                        |
 
 [View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/mixin/_layout.scss#L79)
 
@@ -362,8 +362,8 @@ Using the `layout-flex` mixin, you can create intrinsic flexbox grids with expli
 
 | Name                  | Default Value          | Description                                                                                                              |
 |-----------------------|------------------------|--------------------------------------------------------------------------------------------------------------------------|
-| `$gap`                | `'m'`                    | The gutter value between the elements. The value comes from the `$spacers` map, use any declared key name for shorthand. |
-| `$width-variable`     | `--col-width`          | The optimal width of the columns.                                                                                        |
+| `$gap`                | `'m'`                  | The gutter value between the elements. The value comes from the `$spacers` map, use any declared key name for shorthand. |
+| `$inline-size`        | `--inline-size`        | The optimal width of the columns.                                                                                        |
 
 [View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/mixin/_layout.scss#L100)
 
@@ -371,7 +371,7 @@ Using the `layout-flex` mixin, you can create intrinsic flexbox grids with expli
 
 ```scss
 .form-row--mixed {
-  --col-width: 10rem;
+  --inline-size: 10rem;
 
   @include layout-flex;
 }
@@ -464,7 +464,7 @@ Crop text and display an ellipsis with multiline support where possible.
 ```scss
 .crop-text {
   @include text-ellipsis(2);
-  width: 20rem;
+  inline-size: 20rem;
 }
 ```
 
@@ -492,11 +492,11 @@ Create natively styled custom scrollbars.
 
 | Name                            | Default Value                                     | Description                                       |
 | ------------------------------- | ------------------------------------------------- | ------------------------------------------------- |
-| `$thumb-background-color`       | `color(thumb-background, scrollbar)`       | The color of the scrollbar handle.                |
-| `$thumb-background-color-hover` | `color(thumb-background-hover, scrollbar)` | The color of the scrollbar handle on hover state. |
-| `$track-background-color`       | `color(track-background, scrollbar)`       | The background color of the scrollbar.            |
+| `$thumb-background-color`       | `color(thumb-background, scrollbar)`              | The color of the scrollbar handle.                |
+| `$thumb-background-color-hover` | `color(thumb-background-hover, scrollbar)`        | The color of the scrollbar handle on hover state. |
+| `$track-background-color`       | `color(track-background, scrollbar)`              | The background color of the scrollbar.            |
 | `$size`                         | `0.5rem`                                          | The width or height of the scrollbar.             |
-| `$border-radius`                | `$border-radius-sm`                        | The border-radius of the scrollbar and handle.    |
+| `$border-radius`                | `$border-radius-sm`                               | The border-radius of the scrollbar and handle.    |
 
 [View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/mixin/_utilities.scss#L36)
 
