--- a/src/docs/sass/mixins.mdx
+++ b/src/docs/sass/mixins.mdx
@@ -394,7 +394,7 @@ Using the `selection` mixin, you can simplify the `::selection` declarations.  P
 
 ```scss
 .footer {
-  // @include selection(hsl(262 71% 49%));
+  // @include selection(hsl(262deg 71% 49%));
   @include selection('secondary');
 }
 ```
