--- a/src/template/documentation.mdx
+++ b/src/template/documentation.mdx
@@ -18,7 +18,7 @@ tags: ['Eleventy', 'Free']
 
 A documentation template is always helpful. There are a lot of solutions to make one; we wanted to create our self-hosted version based on our favorite static site generator [Eleventy](https://www.11ty.dev/).
 
-By structure, it is simple, with two levels and additional custom templates like [FAQ]([/faq/](https://eleventy-documentation.sprucecss.com/faq/)) and [Changelog]([/changelog/](https://eleventy-documentation.sprucecss.com/changelog/)).
+By structure, it is simple, with two levels and additional custom templates like [FAQ](https://eleventy-documentation.sprucecss.com/faq/) and [Changelog](https://eleventy-documentation.sprucecss.com/changelog/).
 
 ## Features
 
