--- a/src/docs/customization/themes.mdx
+++ b/src/docs/customization/themes.mdx
@@ -46,8 +46,8 @@ $colors: (
     'code-foreground': $color-white,
     'heading': $color-white,
     'link': $color-primary,
-    'link-hover': color.scale($color-primary, $lightness: -20%),
-    'mark-background': hsl(50 100% 80%),
+    'link-hover': color.scale($color-primary, $lightness: 20%),
+    'mark-background': hsl(50deg 100% 80%),
     'mark-foreground': $color-black,
     'marker': $color-primary,
     'primary': $color-primary,
@@ -55,8 +55,8 @@ $colors: (
     'text': $color-gray,
   ),
   'btn': (
-    'primary-background': hsl(261 52% 59%),
-    'primary-background-hover': hsl(261 52% 65%),
+    'primary-background': hsl(261deg 52% 59%),
+    'primary-background-hover': hsl(261deg 52% 65%),
     'primary-foreground': $color-white,
     'secondary-background': $color-secondary,
     'secondary-background-hover': color.adjust($color-secondary, $lightness: 5%),
