--- a/src/blog/cracking-the-theme-switcher-and-dark-mode.mdx
+++ b/src/blog/cracking-the-theme-switcher-and-dark-mode.mdx
@@ -23,9 +23,9 @@ You have a theme like this:
 
 ```css
 :root {
-  --primary: hsl(262deg 71% 49%);
-  --heading: hsl(205deg 100% 2%);
-  --text: hsl(208deg 9% 42%);
+  --color-primary: hsl(262deg 71% 49%);
+  --color-heading: hsl(205deg 100% 2%);
+  --color-text: hsl(208deg 9% 42%);
 }
 ```
 
@@ -33,9 +33,9 @@ And a dark theme like this:
 
 ```css
 :root[data-theme-mode="dark"] {
-  --primary: hsl(261deg 54% 70%);
-  --heading: hsl(206deg 100% 7%);
-  --text: hsl(0deg 0% 97%);
+  --color-primary: hsl(261deg 54% 70%);
+  --color-heading: hsl(206deg 100% 7%);
+  --color-text: hsl(0deg 0% 97%);
 }
 ```
 
