--- a/src/blog/how-to-reduce-spruce-css-size.mdx
+++ b/src/blog/how-to-reduce-spruce-css-size.mdx
@@ -21,7 +21,7 @@ Usually, we use `generate-styles`:
 
 and we configure what to generate through the `$generators` map.
 
-You can see that from the [source code](https://github.com/conedevelopment/sprucecss/blob/main/scss/mixin/_generator.scss) that these mixin contains a lot of condition based on the [previously mentioned map](http://localhost:8000/docs/sass/variables/#generators).
+You can see that from the [source code](https://github.com/conedevelopment/sprucecss/blob/main/scss/mixin/_generator.scss) that these mixin contains a lot of condition based on the [previously mentioned map](/docs/sass/variables/#generators).
 
 ```scss
 @use 'sprucecss/scss/spruce' with (
