--- a/src/docs/elements/tables.mdx
+++ b/src/docs/elements/tables.mdx
@@ -342,5 +342,5 @@ You can control the width of the scrollable table with the `config('responsive-i
 
 There are some defaults variables that you can configure to customize the table's look.
 
-- [Color variables](http://localhost:8000/docs/sass/variables/#colors)
-- [Display variables](http://localhost:8000/docs/sass/variables/#tables)
+- [Color variables](/docs/sass/variables/#colors)
+- [Display variables](/docs/sass/variables/#tables)
