--- a/src/docs/sass/colors.mdx
+++ b/src/docs/sass/colors.mdx
@@ -475,6 +475,8 @@ Below is the full declaration of the `$colors` map.
       'check-background': $color-primary,
       'check-focus-ring': $color-primary,
       'check-foreground': $color-white,
+      'group-label-background': color.scale($color-black, $lightness: 2.5%),
+      'group-label-foreground': $color-gray,
       'invalid': $color-danger,
       'invalid-focus-ring': color.adjust($color-danger, $alpha: -0.75),
       'label': $color-black,
