Color update once again

--- a/src/docs/sass/colors.mdx
+++ b/src/docs/sass/colors.mdx
@@ -462,9 +462,11 @@ Below is the full declaration of the `$colors` map.
       'primary-background': $color-primary,
       'primary-background-hover': color.adjust($color-primary, $lightness: -10%),
       'primary-foreground': $color-white,
+      'primary-shadow': color.adjust($color-primary, $lightness: 35%),
       'secondary-background': $color-secondary,
       'secondary-background-hover': color.adjust($color-secondary, $lightness: -10%),
       'secondary-foreground': $color-white,
+      'secondary-shadow': color.adjust($color-secondary, $lightness: 35%),
     ),
     'form': (
       'background': $color-white,
@@ -475,7 +477,7 @@ Below is the full declaration of the `$colors` map.
       'check-background': $color-primary,
       'check-focus-ring': $color-primary,
       'check-foreground': $color-white,
-      'group-label-background': color.scale($color-black, $lightness: 2.5%),
+      'group-label-background': hsl(210deg 60% 98%),
       'group-label-foreground': $color-gray,
       'invalid': $color-danger,
       'invalid-focus-ring': color.adjust($color-danger, $alpha: -0.75),
